# erlcaml

./: .gitattributes  .gitignore  Makefile  README.md  erlcaml.install  erlcaml.opam
erl/: thing.erl
erl_core/: core_mod.core
erl_pp/: pp_mod.pp
ml/: call_thing.lambda  call_thing.ml  erl_interop.lambda  erl_interop.ml  thing.lambda  thing.ml
src/: erlcaml.ml  jbuild  main.ml
