opam-version: "1.2"

maintainer: ""
authors: [""]
homepage: ""
bug-reports: ""
dev-repo: ""
license: "Apache-2.0"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "base"
  "jbuilder"
]

available: [ ocaml-version >= "4.04.1" ]

descr: "
Library for serializing OCaml values to and from S-expressions

Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
